<resources>
    <string name="app_name">Shared Boxes</string>
    <string name="action_settings">Settings</string>
    <string name="action_join_a_group">Join a group</string>
    <string name="title_activity_group">GroupActivity</string>
    <string name="action_add_members">Add members</string>
    <string name="action_silence">Silence</string>
    <string name="action_info">Info</string>
    <string name="how_to_join_group">Type the group ID and the related join-code</string>
    <string name="group_id">Group ID</string>
    <string name="group_code">Group join-code</string>
    <string name="join">Join</string>
    <string name="error_group_id_not_found">Group ID not found</string>
    <string name="error_group_join_code_incorrect">Incorrect Join-code</string>
    <string name="group_created">Group created</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register_proposal">If you are not registered yet, <u>register now!</u></string>
    <string name="action_register">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_import">Import not valid</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="auth_failed">Error in authentication</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="group_section">Groups Section</string>
    <string name="personal_section">Personal Section</string>
    <string name="expenses_section">Expenses</string>
    <string name="summary_section">Summary</string>
    <string name="title_notifications">Notifications</string>
    <string name="prompt_name">Type your name</string>
    <string name="prompt_surname">Type your surname</string>
    <string name="prompt_username">Type your username</string>
    <string name="title_activity_new_group">Add members to your group (1of3)</string>
    <string name="title_expense_creation">New Expense</string>
    <string name="Name">Name</string>
    <string name="Description">Description</string>
    <string name="Import">Import</string>
    <string name="Author">Author</string>
    <string name="create_group">Create Group</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_activity_choice_group_members">Add members</string>
    <string name="invite_user">Invite</string>
    <string name="search">Search</string>
    <string name="title_activity_add_members_to_group">Add members to your group (2of3)</string>
    <string name="add_from_friend">Add members from your friends</string>
    <string name="title_activity_invite_users_to_group">Invite to TA (3of3)</string>
    <string name="no_network_connection">Check your connection</string>
    <string name="action_logout">Logout</string>
    <string name="action_profile">Personal profile</string>
    <string name="title_activity_login">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="title_activity_new_group_phase1">NewGroupActivityPhase1</string>
    <string name="title_activity_new_group_phase2">NewGroupActivityPhase2</string>
    <string name="title_activity_new_group_phase3">NewGroupActivityPhase3</string>
    <string name="title_activity_add_new_contacts">Add to your contacts list</string>
    <string name="add_from_email">Invite new friends through email</string>
    <string name="error_invalid_username">This username is not valid</string>
    <string name="title_activity_invite_to_join_community">InviteToJoinCommunity</string>
    <string name="action_invite_members">Invite your friends</string>
    <string name="add_to_list_invitations">Add to receivers list</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="username_semicolon">Username:</string>
    <string name="loading">Loading...</string>
    <string name="type_name_surname_username">Type the full name or the username</string>
    <string name="type_of_password">The password has to be at least 7 characters long</string>
    <string name="added">Added</string>
    <string name="pick_image_intent_text">Select an application to complete the action</string>
    <string name="title_activity_info_group">InfoGroupActivity</string>
    <string name="date_creation">Creation date</string>
    <string name="members">Members</string>
    <string name="title_activity_info_expense">InfoExpenseActivity</string>
    <string name="value">Amount</string>
    <string name="action_edit_profile">Edit profile</string>
    <string name="default_bio">Hi! I\'m there and I\'m using Shared Pockets!</string>
    <string name="insert_bio">Insert short bio</string>
    <string name="insert_username">Insert username</string>
    <string name="positive_button_dialogue">OK</string>
    <string name="negative_button_dialogue">BACK</string>
    <string name="not_possible_to_change_username">Not possible to change username.\nNot allowed to Google users</string>
    <string name="insert_description">Insert a description</string>
    <string name="insert_group_name">Insert a name</string>
    <string name="no_expense_description">No description</string>
    <string name="no_image">no_image</string>
    <string name="member_already_in_the_group">Member already in the group</string>
    <string name="user_not_found">User not found</string>
    <string name="members_added">Members added</string>
    <string name="changes_applied">Changes applied</string>
    <string name="problems">Problems</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="google_play_services_error">Google Play Services Error</string>
    <string name="group_name_error">Group Name is not valid.\nMust contains numbers or letters</string>
    <string name="added_as_friend">Added as friend</string>
    <string name="tab_expenses">EXPENSES</string>
    <string name="tab_report">REPORT</string>
    <string name="tab_groups">GROUPS</string>
    <string name="tab_my_section">MY SECTION</string>
    <string name="tab_contacts">CONTACTS</string>
    <string name="hi">Hi!</string>
    <string name="mail_body_1">invites you to join "Shared Expenses" Community.\n
        You can do it downloading the application from the store (or at this link: www.chesssonoforte.it).\n
        This application will allow you to easily manage expenses shared with your friends.\n\n
        We cannot wait for your association!\n
        Your MAD14 team</string>
    <string name="invitation_mail_subject">Invite to join MAD14</string>
    <string name="emails_sent">Emails have been sent</string>
    <string name="action_forgot_password">Forgot your password?</string>
    <string name="send_email">Send email</string>
    <string name="no_groups">In this page you can see groups you are part of</string>
    <string name="no_summary">In this page you can see the summary of your groups</string>
    <string name="no_contact">In this page you can see your contacts</string>
    <string name="no_expenses">In this page you can see the expenses of this group</string>
    <string name="no_report">In this page you can see the summary of this group</string>
    <string name="date">Date</string>
    <string name="search_users">Searching for contacts...</string>
    <string name="credit">Credit</string>
    <string name="debit">Debit</string>
    <string name="delete_group_request">Do you want to delete this group?</string>
    <string name="deleting_group">The group is going to be deleted...</string>
    <string name="delete_group_error">You can not delete this group.\nYou must balance your status before.</string>
    <string name="friends_added">Friends added</string>
    <string name="delete_item_request">Do you want to delete this item?</string>
    <string name="deleting_expense">Deleting expense...</string>
    <string name="impossible_del_exp">\Only the owner can delete an expense!</string>
    <string name="settle_expense">Do you want to settle this operation?</string>
    <string name="confirm_user_payment">Waiting for the confirm of the other user</string>
    <string name="wait_confirm">The other user hasn\'t confirm yet. Please wait the confirmation</string>
    <string name="currency">Currency</string>
    <string name="default_currency">€</string>
    <string name="choose_your_currency">Choose your currency</string>
    <string name="currency_set_to">Currency set to</string>
    <string name="currency_advisor">You can change it from your settings</string>
    <string name="change_language">Choose your language</string>
    <string name="insert_an_image">Insert an image</string>
    <string name="submit">Submit</string>
    <string name="or">or</string>
    <string name="add">Add</string>
    <string name="group_name">Group name</string>
    <string name="summary1">Summary1</string>
    <string name="summary2">Summary2</string>
    <string name="pay">Pay</string>
    <string name="confirm">Confirm</string>
    <string name="waiting">Waiting...</string>
    <string name="add_as_friend">Add as friend</string>
    <string name="title_activity_edit_expense">EditExpenseActivity</string>
</resources>