<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="it.polito.mad14.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="3"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_personal_profile"
        android:orderInCategory="1"
        android:title="@string/action_profile"
        app:showAsAction="collapseActionView"/>

    <item
        android:id="@+id/action_invite_new_members"
        android:orderInCategory="2"
        android:title="@string/action_invite_members"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never" />
</menu>
