<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="it.polito.mad14.ExpenseCreation"
    android:orientation="vertical"
    android:id="@+id/rl_expense"
    android:background="@color/background"
    >

    <ProgressBar
        android:id="@+id/progressBar_expense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@android:style/Widget.ProgressBar.Large"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:translationZ="2dp"
        />

    <EditText android:id="@+id/expense_name"
        android:hint="@string/Name"
        android:inputType="text"
        android:textSize="20dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:layout_marginBottom="20dp">
    </EditText>

    <EditText android:id="@+id/expense_description"
        android:hint="@string/Description"
        android:inputType="text"
        android:textSize="20dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:layout_below="@+id/expense_name"
        android:layout_marginBottom="20dp">
    </EditText>

    <LinearLayout
        android:id="@+id/linear_layout_import"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/expense_description">

        <EditText
            android:id="@+id/expense_import"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:hint="@string/Import"
            android:inputType="text"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinner_currency"
            android:layout_width="wrap_content"
            android:layout_weight="0"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:minWidth="100dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/expense_add_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insert_an_image"
        android:textSize="@dimen/main_text"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginStart="@dimen/margin"
        android:layout_below="@id/linear_layout_import"
        android:textColor="@color/writing"
        />

    <ImageButton
        android:id="@+id/insert_image"
        android:layout_width="@dimen/icon_dimension_group"
        android:layout_height="@dimen/icon_dimension_group"
        android:background="@mipmap/photo_icon"
        android:layout_below="@id/expense_add_text"
        android:layout_marginLeft="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginRight="50dp"
        android:layout_marginEnd="50dp"
        android:clickable="true"
        android:onClick="onClickImage"
        />

    <Button
        android:id="@+id/expense_button"
        android:layout_width="@android:dimen/thumbnail_width"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:clickable="true"
        android:onClick="onClick"
        android:layout_below="@+id/insert_image"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>
</RelativeLayout>
