<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/tv_group"
    tools:context="it.polito.mad14.MainActivity"
    android:clickable="true"
    android:onClick="onClick"
    android:background="@color/background"
    android:layout_marginTop="@dimen/margin_half"
    android:layout_marginBottom="@dimen/margin_half"
    >

    <it.polito.mad14.myDataStructures.CircularImageView
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:id="@+id/group_icon"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="10dp"
        android:layout_marginRight="@dimen/margin_double"
        android:layout_marginEnd="@dimen/margin_double"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/group_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/main_text"
        android:textColor="@color/writing"
        android:elegantTextHeight="true"
        android:layout_toRightOf="@+id/group_icon"
        android:layout_toEndOf="@id/group_icon"
        android:text="@string/group_name"
        android:layout_marginBottom="@dimen/margin_half"
        android:layout_marginTop="10dp"/>


    <TextView
        android:id="@+id/group_summary1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/summary"
        android:textColor="@color/green"
        android:text="@string/summary1"
        android:layout_below="@+id/group_name"
        android:layout_alignLeft="@+id/group_name"
        android:layout_alignStart="@+id/group_name"
        android:layout_marginTop="5dp"
        />

    <TextView
        android:id="@+id/group_summary2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/summary"
        android:textColor="@color/red"
        android:text="@string/summary2"
        android:layout_alignBaseline="@+id/group_summary1"
        android:layout_alignBottom="@+id/group_summary1"
        android:layout_toLeftOf="@+id/group_notification"
        android:layout_toStartOf="@id/group_notification"
        android:layout_marginRight="@dimen/margin_double"
        android:layout_marginEnd="@dimen/margin_double"
        android:layout_marginTop="5dp"
        />

    <TextView
        android:id="@+id/group_notification"
        android:layout_width="@dimen/icon_dimension"
        android:layout_height="@dimen/icon_dimension"
        android:background="@mipmap/notification_icon"
        android:layout_marginRight="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:layout_alignTop="@+id/group_name"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/margin"
        android:textAlignment="center"
        android:textColor="@color/writing"
        android:gravity="center"
        android:visibility="invisible"/>



</RelativeLayout>