<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="it.polito.mad14.InfoGroupActivity"
    tools:showIn="@layout/activity_info_group"
    android:background="@color/backgroundDark"
    android:fillViewport="true"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/date_creation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="@dimen/margin"
                android:clickable="true"
                android:elevation="4dp"
                android:text="@string/date_creation"
                android:textSize="@dimen/summary"
                android:layout_alignParentTop="true"/>

            <TextView
                android:id="@+id/tv_date_creation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:clickable="true"
                android:elevation="4dp"
                android:textColor="@color/writing"
                android:textSize="@dimen/summary"
                android:layout_alignParentRight="true"
                android:layout_alignBaseline="@id/date_creation"
                android:layout_toRightOf="@id/date_creation"
                android:layout_below="@id/date_creation"/>

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="@dimen/margin"
                android:clickable="true"
                android:elevation="4dp"
                android:text="@string/Description"
                android:textSize="@dimen/summary"
                android:layout_below="@id/tv_date_creation"
                />

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:elevation="4dp"
                android:textColor="@color/writing"
                android:textSize="@dimen/summary"
                android:layout_below="@id/description"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignBaseline="@id/description"
                android:layout_toRightOf="@id/description"
                android:gravity="right"
                android:text="-"
                />


        </RelativeLayout>

        <TextView
            android:id="@+id/tv_members"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:clickable="true"
            android:elevation="4dp"
            android:text="@string/members"
            android:textSize="@dimen/summary"
            />

        <ListView
            android:id="@+id/lv_members_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
